fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 header {
@@ -45,7 +46,6 @@ nav {
 .home {
   display: inline-block;
   background-color: #105B9C;
-  overflow: auto;
 }
 
 .cat-photo {
@@ -71,6 +71,9 @@ img {
 .cats {
   background-color: #F7CF07;
   padding: 30px 20px;
+  position: relative;
+   bottom: 3px;
+
 }
 
 .cats h3 {
